Fix vertical scrollbar glitch
Remove padding from sides

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -317,7 +317,7 @@ input:focus:-ms-input-placeholder {
     bottom: 0;
     width: 100%;
     height: 18px;
-    padding: 12px;
+    padding: 12px 0;
     font-size: 12px;
     background-color: #2D2F31;
     text-align: center;
